@@ -1,5 +1,17 @@
 2018-09-19  Saam barati  <sbarati@apple.com>
 
+        CheckStructureOrEmpty should pass in a tempGPR to emitStructureCheck since it may jump over that code
+        https://bugs.webkit.org/show_bug.cgi?id=189703
+
+        Reviewed by Mark Lam.
+
+        This fixes a crash that a TypeProfiler change revealed.
+
+        * dfg/DFGSpeculativeJIT64.cpp:
+        (JSC::DFG::SpeculativeJIT::compile):
+
+2018-09-19  Saam barati  <sbarati@apple.com>
+
         AI rule for MultiPutByOffset executes its effects in the wrong order
         https://bugs.webkit.org/show_bug.cgi?id=189757
         <rdar://problem/43535257>
